--- a/frontend/src/components/Notifications/Notifications.module.css
+++ b/frontend/src/components/Notifications/Notifications.module.css
@@ -55,3 +55,22 @@
   font-size: 24px;
   margin-top: 20px;
 }
+
+@media (max-width: 600px) {
+  .row h2 {
+    font-size: 18px;
+  }
+
+  .row p {
+    font-size: 16px;
+  }
+
+  .left > svg {
+    font-size: 30px;
+  }
+
+  .left {
+    flex-direction: column;
+    align-items: start;
+  }
+}
